samples/_failures_safe/1761043348_339541_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09713009.c: In function ‘main’:
./samples/SAFE/__tmp_09713009.c:164:16: error: missing terminating " character
  164 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_09713009.c:164:9: error: expected expression at end of input
  164 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_09713009.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09713009.c:164:9: error: expected declaration or statement at end of input
